added basic pot plant

--- a/p5js/index.html
+++ b/p5js/index.html
@@ -14,5 +14,9 @@
         <a href="/coding_challenge/74_clock/">74: Clock</a>
       </li>
     </ul>
+    <h2>Things for Liv</h2>
+    <ul>
+      <a href="/forliv/plant/">Plant</a>
+    </ul>
   </body>
 </html>
